crates/oxc_astro_codegen/tests/integration/snapshots/astro/self-closing_formatting_elements_2.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<body>
  <div id="1"><div id="2"><div id="3"><i id="a" /></div></div></div>
  <div id="4"><div id="5"><div id="6"><i id="b" /></div></div></div>
  <div id="7"><div id="8"><div id="9"><i id="c" /></div></div></div>
</body>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<body>
  <div id="1"><div id="2"><div id="3"><i id="a"></i></div></div></div>
  <div id="4"><div id="5"><div id="6"><i id="b"></i></div></div></div>
  <div id="7"><div id="8"><div id="9"><i id="c"></i></div></div></div>
</body>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<body>
  <div id="1"><div id="2"><div id="3"><i id="a"></i></div></div></div>
  <div id="4"><div id="5"><div id="6"><i id="b"></i></div></div></div>
  <div id="7"><div id="8"><div id="9"><i id="c"></i></div></div></div>
</body>`;
}, undefined, undefined);
export default $$Component;

